hphp/hack/test/typecheck/reified_generics/is_as_generic_simple.php.exp
File "is_as_generic_simple.php", line 4, characters 8-8:
Invalid "as" expression hint (Typing[4195])
  File "is_as_generic_simple.php", line 4, characters 8-8:
  The "as" operator cannot be used with an erased generic type parameter
File "is_as_generic_simple.php", line 8, characters 8-8:
Invalid "as" expression hint (Typing[4195])
  File "is_as_generic_simple.php", line 8, characters 8-8:
  The "as" operator cannot be used with a reified type parameter that is not marked <<__Enforceable>>
